# GhostStream

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  build_ghoststream.py  docker-compose.yml  ghoststream.yaml  package-lock.json  publish.py  pytest.ini  requirements.txt  run.py  setup.py  start.bat  start.sh  test.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-desktop.yml  build-release.yml
desktop/: .gitignore  README.md  download-ffmpeg.js  index.html  package-lock.json  package.json  setup-bundle.js
desktop/src/: App.svelte
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: API.md
examples/: __init__.py  curl_examples.md  demo.html  demo.py  ghosthub_integration.py  minimal.py  quickstart.py  web_player.html
ghoststream/: __init__.py  __main__.py  api.py  client.py  config.py  discovery.py  hardware.py  jobs.py  launcher.py  logging_config.py  models.py  transcoder.py
ghoststream/api/: __init__.py  app.py  middleware.py  websocket.py
ghoststream/discovery/: __init__.py  browser.py  ghosthub.py  service.py
ghoststream/hardware/: __init__.py  detector.py  models.py
ghoststream/jobs/: __init__.py  manager.py  models.py  stats.py
tests/: __init__.py  conftest.py  test_api.py  test_api_full.py  test_config.py  test_encoders.py  test_engine.py  test_hardware.py  test_integration.py  test_real_transcode.py  test_scheduler.py  test_transcoding.py  test_worker.py
(+32 files in other folders)
